Fix of processing crash on knnMatch output

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ input/videos/short_TERM Lista 5 czesc 1.mp4
 input/videos/TERM Lista 5 czesc 1.mp4
 output/out_short_TERM lista 5 czesc 1.mp4
 output/processing_report.log
+crop_movie.py
+output/out_TERM lista 5 czesc 1.mp4
