--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
     "template_input": "input/template/sidebar_template.png",
     "output_folder": "output",
-    "good_match_threshold": 100,
+    "good_match_threshold": 50,
     "debug": false,
     "input_files": [
-        "input/videos/short_TERM lista 5 czesc 1.mp4"
+        "input/videos/TERM lista 5 czesc 1.mp4"
     ]
 }
