--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-numpy==1.24.3
+moviepy==2.2.1
+numpy==2.3.5
 opencv_contrib_python==3.4.18.65
 opencv_python==4.10.0.84
 opencv_python_headless==4.10.0.84
+tqdm==4.66.5
